# Zelealem

./: Cargo.toml  README.md  whitepaper.md
obsidian-compiler/: Cargo.toml
obsidian-compiler/src/: ast.rs  lexer.rs  parser.rs  token.rs
obsidian-compiler/tests/: lexer_test.rs  parser_test.rs
zelealem-node/: Cargo.toml
zelealem-node/src/: bytecode.rs  chain.rs  consensus.rs  crypto.rs  ledger.rs  lib.rs  mempool.rs  node.rs  p2p.rs  state_db.rs  topics.rs  validator.rs  zvm.rs
zelealem-node/tests/: validation_flow.rs  zvm_tests.rs
