[package]
name = "zelealem-node"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
libp2p = { version = "0.53.2", features = ["tokio", "gossipsub", "mdns", "macros", "noise", "tcp", "yamux", "ping"] }
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde-big-array = "0.5.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }